<resources>
    <string name="facebook_app_id">2199429780317269</string>
    <string name="fb_login_protocol_scheme">fb2199429780317269</string>
    <string name="app_name">Rent House</string>
    <string name="app_message">An Cư mới lạc nghiệp</string>
    <string name="app_login">Login with FaceBook</string>
    <string name="detail_title">Detail</string>
    <string name="detail_default_name">Nguyễn Diệp Huấn</string>
    <string name="detail_default_phone">Contact: 098123456</string>
    <string name="detail_default_address">157 Bà Triệu</string>
    <string name="detail_default_description">Đây là 1 sự miêu tả</string>
    <string name="detail_default_price">$2300/month</string>
    <string name="detail_opportunities">Opportunities</string>
    <string name="detail_default_bed">3 Beds</string>
    <string name="detail_default_bath">3 Baths</string>
    <string name="detail_default_floor">3 Floors</string>
    <string name="sale_house">Sale House</string>
    <string name="post">Đăng tin cho thuê</string>
    <string name="address">Địa chỉ nhà :</string>
    <string name="address_state">Phường :</string>
    <string name="address_state1">Quận :</string>
    <string name="phone_number">Số điện thoại :</string>
    <string name="price">Giá cho thuê :</string>
    <string name="content">Nội dung miêu tả :</string>
    <string name="number_room">Số phòng ngủ :</string>
    <string name="number_bathroom">Số phòng tắm :</string>
    <string name="number_flooor">Số tầng :</string>
    <string name="customer">Customer</string>
    <string name="option_button_cho_thue">Cho thuê</string>
    <string name="option_button_di_thue">Đi thuê</string>
    <string name="coppy_right_by_andrew">Coppy right by Andrew</string>
    <string name="option_title_district">Quận bạn muốn:</string>
    <string name="option_title_ward">Phường bạn muốn:</string>
    <string name="detail_default_rent">Rent</string>
    <string name="detail_default_save">Save</string>
    <string name="detail_default_map">Map</string>
    <string name="save_title">Save</string>
    <string name="rent_title">Rent</string>
    <string name="item_rent_saled">Saled</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
