<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".view.activity.ActivitySaleHouse">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                app:title="@string/sale_house">

            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/tv_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_centerHorizontal="true"
                android:text="@string/post"
                android:textColor="@color/colorBlack"
                android:layout_margin="10dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_post"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <EditText
                    android:padding="10dp"
                    android:background="#9ce7e7e7"
                    android:hint="Nhập địa chỉ nhà"
                    android:id="@+id/edt_address_house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_state1"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <Spinner
                    android:layout_margin="10dp"
                    android:id="@+id/spiner_state"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"></Spinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_state"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <Spinner
                    android:layout_margin="10dp"
                    android:id="@+id/spiner_state_1"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"></Spinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <EditText
                    android:padding="10dp"
                    android:background="#9ce7e7e7"
                    android:hint="Nhập số điện thoại "
                    android:id="@+id/edt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <EditText
                    android:padding="10dp"
                    android:background="#9ce7e7e7"
                    android:hint="Nhập giá cho thuê"
                    android:id="@+id/edt_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <EditText
                    android:padding="10dp"
                    android:gravity="top"
                    android:background="#9ce7e7e7"
                    android:hint="Nhập nội dung miêu tả"
                    android:id="@+id/edt_content"
                    android:layout_width="match_parent"
                    android:layout_height="150dip" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_room"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <EditText
                    android:padding="10dp"
                    android:background="#9ce7e7e7"
                    android:hint="Nhập số phòng ngủ"
                    android:id="@+id/edt_number_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_bathroom"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />
                <EditText
                    android:padding="10dp"
                    android:background="#9ce7e7e7"
                    android:hint="Nhập số phòng tắm"
                    android:id="@+id/edt_number_bathroom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_flooor"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />
                <EditText
                    android:padding="10dp"
                    android:background="#9ce7e7e7"
                    android:hint="Nhập số tầng"
                    android:id="@+id/edt_number_flooor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/img_picker_image"
                        android:src="@drawable/image"
                        android:layout_width="70dp"
                        android:layout_margin="10dp"
                        android:layout_height="70dp" />
                    <Button
                        android:textAllCaps="false"
                        android:id="@+id/btn_upload_image"
                        android:text="Upload Image"
                        android:textColor="@color/colorWhite"
                        android:padding="10dp"
                        android:background="@drawable/button_upload_image"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp" />
                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textAllCaps="false"
                        android:layout_marginLeft="50dp"
                        android:id="@+id/btn_up_pots"
                        android:text="Post"
                        android:background="@drawable/button_radius"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>