<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".view.activity.DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:title="@string/detail_title" />

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/toolbar"
        android:background="@color/colorLightGray" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/viewTop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_avatar" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ivAvatar"
                android:layout_toEndOf="@id/ivAvatar"
                android:text="@string/detail_default_name"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ivAvatar"
                android:layout_toEndOf="@id/ivAvatar"
                android:text="@string/detail_default_phone"
                android:textSize="16sp"
                android:textStyle="italic" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@drawable/ic_share"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/ivImage1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/ivAvatar"
                android:scaleType="centerCrop"
                android:src="@drawable/houserent"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/layoutImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivImage1"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/ivImage2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/houserent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/ivImage3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/houserent"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutImage"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/detail_default_address"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutImage"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:text="@string/detail_default_price"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/detail_default_description"
                android:textSize="14sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/tvOpportunities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDescription"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/detail_opportunities"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutOpportunities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvOpportunities"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvBed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_text_opportunities"
                    android:drawableStart="@drawable/ic_bed"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/detail_default_bed"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <TextView
                    android:id="@+id/tvBath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_text_opportunities"
                    android:drawableStart="@drawable/ic_bath"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/detail_default_bath"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <TextView
                    android:id="@+id/tvFloor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_text_opportunities"
                    android:drawableStart="@drawable/ic_floor"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/detail_default_floor"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle,InefficientWeight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutOpportunities"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_option"
                    android:drawableStart="@drawable/ic_map"
                    android:drawableTint="@color/colorWhite"
                    android:padding="5dp"
                    android:text="@string/detail_default_map"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <Button
                    android:id="@+id/btSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_option"
                    android:drawableStart="@drawable/ic_save"
                    android:drawableTint="@color/colorWhite"
                    android:padding="5dp"
                    android:text="@string/detail_default_save"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    tools:ignore="ButtonStyle,InefficientWeight" />

                <Button
                    android:id="@+id/btRent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_button_option"
                    android:drawableStart="@drawable/ic_rent"
                    android:drawableTint="@color/colorWhite"
                    android:padding="5dp"
                    android:text="@string/detail_default_rent"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    tools:ignore="ButtonStyle,InefficientWeight" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>