<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/houserent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivImage"
        android:layout_alignBottom="@id/ivImage"
        android:layout_toEndOf="@id/ivImage"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_default_address"
            android:textColor="@color/colorButtonDiThue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_default_description"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ivImage"
        android:layout_alignBottom="@id/ivImage"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:text="@string/detail_default_price"
        android:textColor="#8FED00"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        tools:ignore="RelativeOverlap" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ivImage"
        android:layout_marginTop="10dp"
        android:background="@color/colorLightGray" />

</RelativeLayout>