<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="5dp"
        app:contentPadding="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/houserent"
                tools:ignore="ContentDescription" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_below="@id/ivImage"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_avatar" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ivAvatar"
                android:layout_toEndOf="@id/ivAvatar"
                android:text="@string/detail_default_name"
                android:textColor="@color/colorButtonDiThue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/gray_text_color"
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ivAvatar"
                android:layout_toEndOf="@id/ivAvatar"
                android:text="@string/detail_default_address"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <TextView
                android:textColor="@color/gray_text_color"
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivAvatar"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/detail_default_phone"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"
                android:background="@drawable/layout_text_opportunities"
                android:text="@string/item_rent_saled" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
